added banner background image, adjusted banner header on homepage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!-- <!DOCTYPE HTML>
-
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Henotes Data Dossier | Building Africa’s Data-Oriented Workforce</title>
@@ -54,16 +49,10 @@
 				</div>
 
 			<!-- Banner -->
-				<!-- <section id="banner">
-					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
-						<a href="#" class="button">Learn More</a>
-					</header>
-				</section> -->
 				<section id="banner">
-					<header>
+					<header id="homeHeader">
 						<h2>
-							BUILDING AFRICA’S<br /> <em>DATA-ORIENTED WORKFORCE</em>
+							BUILDING AFRICA’S <em>DATA-ORIENTED WORKFORCE</em>
 						</h2>
 						<p>
 							We help organisations move from scattered data and guesswork to confident,
@@ -228,7 +217,7 @@
 				</ul>
 
 				<!-- Copyright -->
-				 
+
 				<div class="copyright">
 					<ul class="menu">
 						<li>&copy; Hennotes Data Dossier. All rights reserved.</li>
